--- a/Bethany.css
+++ b/Bethany.css
@@ -10,6 +10,17 @@
 /* body{
     height: 1500px;
 } */
+
+.spanLine{
+    width: 60px;
+    margin: 0 auto;
+    /* border: rgb(24, 23, 23); */
+    margin-top: 0px;
+    margin-bottom: 10px;
+    padding: 1px;
+    display: block;
+    background-color: rgb(116, 114, 114);
+}
 .regBtn{
     border: 1px solid white;
     background: transparent;
@@ -211,12 +222,96 @@
 
 
 /* #####################       Section:-11       ############# */
-#s11Right > div > div > img{
 
+#s11Right > div > div{
+    text-align: center;   
 }
-.imgDiv {
+#s11Right > div > div:hover div > img{
+    scale: 1.2;
+}
+.s11ImgDiv {
+    display: inline-block;
     border-radius: 50%;
     overflow: hidden;
+    height: 130px;
+    width: 130px;
+}
+.s11Right{
+    background-color: var(w);
+    box-shadow: rgb(9, 9, 9);
+}
+.s11ImgDiv > img{
+    width: 100%;
+    height: 100%;
+    transition: all ease-in-out .2s;
+}
+.s11Contant > p{
+    font-size: 15px;
+    line-height: 15px;
+    display: inline-block;
+}
+.s11Contant >span{
+    width: 60px;
+    margin: 0 auto;
+    /* border: rgb(24, 23, 23); */
+    margin-top: 0px;
+    margin-bottom: 10px;
+    padding: 1px;
+    display: block;
+    background-color: rgb(116, 114, 114);
+}
+.s11Media > a{
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 50%;
+    transition: all ease-in-out .3s;
+}
+.s11Media > a:hover i{
+    background-color: var(--primary-background);
+}
+.s11Media > a > i{
+    background-color: rgb(132, 129, 129);
+    color: var(--white-color);
+    border-radius: 50%;
+    font-size: 20px;
+    padding: 3px;
+}
+
+/* #####################       Section:-12       ############# */
+
+#map{
+    height: 250px;
+    width: 100%;
+}
+#map > iframe{
+    width: 100%;
+    height: 100%;
+}
+
+
+/* ################### */
+#s12Location{
+    width: 100%;
+}
+.s12details > i{
+    font-size: 25px;
+    padding: 7px 10px;
+    border-radius: 50%;
+    color: var(--white-color);
+    background-color: var(--primary-background);
+}
+
+/* ############## */
+#s12Form button{
+    background-color: #05b687;
+    margin: 0 auto;
+    display: block;
+    color: var(--white-color);
+    transition: all ease-in-out .3s;
+}
+#s12Form button:hover{
+    background-color: var(--primary-color);
+
 }
 
 /* #####################       Section:-10       ############# */
