--- a/Bethany.css
+++ b/Bethany.css
@@ -38,6 +38,12 @@
     background: var(--primary-background);
     color: var(--white-color);
 }
+#section1{
+    position: sticky;
+    top: 0;
+    z-index: 10;
+}
+
 
 #getStarted{
     background-color: var(--primary-background);
@@ -50,13 +56,13 @@
 #section2{
     background-image: url('Image/hero-bg.jpg');
     width: 100%;
-    height: 80vh;
+    height: 90vh;
     background-size: cover;
     position: relative;
     /* background-color: rgba(0, 0, 0, 0.864); */
     /* background: -webkit-linear-gradient(left,rgba(255,0,0,0),#141823); */
-    
-    padding-top: 100px ;
+    margin-top: -110px;
+    padding-top: 150px ;
     background-attachment: fixed;
 }
 #section2:before {
@@ -219,6 +225,81 @@
 
 
 /* #####################       Section:-10       ############# */
+.testimonials .testimonials-carousel,
+.testimonials .testimonials-slider {
+  overflow: hidden;
+}
+
+.testimonials .testimonial-item {
+  box-sizing: content-box;
+  padding: 30px 30px 0 30px;
+  margin: 30px 15px;
+  text-align: center;
+  min-height: 350px;
+  box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.08);
+  background: #fff;
+}
+
+.testimonials .testimonial-item .testimonial-img {
+  width: 90px;
+  border-radius: 50%;
+  border: 4px solid #fff;
+  margin: 0 auto;
+}
+
+.testimonials .testimonial-item h3 {
+  font-size: 18px;
+  font-weight: bold;
+  margin: 10px 0 5px 0;
+  color: #111;
+}
+
+.testimonials .testimonial-item h4 {
+  font-size: 14px;
+  color: #999;
+  margin: 0;
+}
+
+.testimonials .testimonial-item .quote-icon-left,
+.testimonials .testimonial-item .quote-icon-right {
+  color: #00cc95;
+  font-size: 26px;
+}
+
+.testimonials .testimonial-item .quote-icon-left {
+  display: inline-block;
+  left: -5px;
+  position: relative;
+}
+
+.testimonials .testimonial-item .quote-icon-right {
+  display: inline-block;
+  right: -5px;
+  position: relative;
+  top: 10px;
+}
+
+.testimonials .testimonial-item p {
+  font-style: italic;
+  margin: 0 auto 15px auto;
+}
+
+.testimonials .swiper-pagination {
+  margin-top: 20px;
+  position: relative;
+}
+
+.testimonials .swiper-pagination .swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+  background-color: #fff;
+  opacity: 1;
+  border: 1px solid #009970;
+}
+
+.testimonials .swiper-pagination .swiper-pagination-bullet-active {
+  background-color: #009970;
+}
 
 
 /* #####################       Section:-11       ############# */
@@ -314,5 +395,39 @@
 
 }
 
-/* #####################       Section:-10       ############# */
+
+/* #####################       Section:-13       ############# */
+.bg-footer{
+    background-color: #f6f6f6;
+}
+.ul > li{
+    position: relative;
+}
+.ul > li::before{
+    content: ">";
+    top: 0;
+    left: 0;
+    padding: 10px;
+    color: #3fbbc0;
+    font-weight: bolder;
+}
+.subscribe:hover{
+    background-color: #68cacd;
+    background-color: #05b687;
+}
+.fot-bg{
+    background-color: #eeeeee;;
+}
+#footerIcons > div > i{
+    padding: 10px;
+    border-radius: 50%;
+    background-color: #05b687; color: white;
+    transition: all ease-in-out .2s;
+}
+#footerIcons > div > i:hover{
+    background-color: var(--primary-color);
+}
+
+
+/* #####################       Section:-13       ############# */
 
